# matdrv

./: .gitignore  70-matdrv.conf  Makefile  README.md  vmtest.sh
gtest/: CMakeLists.txt
src/kernel/: Makefile  matdrv-backend-software.c  matdrv-backend-software.h  matdrv-backend.c  matdrv-backend.h  matdrv-common.h  matdrv-devmanager.c  matdrv-devmanager.h  matdrv-log.h  matdrv-main.c  matdrv-version.h  matdrv.c
src/kernel/include/linux/: matdrv.h
src/tests/: CMakeLists.txt  matdrv-ut-backend-software.cpp  matdrv-ut-basic.cpp  matdrv-ut-common.cpp  matdrv-ut-common.hpp  matdrv-ut-ioctl.cpp  matdrv-ut-main.cpp  matdrv-ut-multithread.cpp
util/: build.sh
