CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

FILE(GLOB MATDRV_TESTS_SOURCES *.cpp)
FILE(GLOB MATDRV_TESTS_HEADERS *.hpp)

SET(GTEST_DIRECTORY ../../gtest)

INCLUDE_DIRECTORIES(${GTEST_DIRECTORY}/include)
LINK_DIRECTORIES(${GTEST_DIRECTORY})

ADD_EXECUTABLE(matdrv-tests ${MATDRV_TESTS_SOURCES} ${MATDRV_TESTS_HEADERS})
TARGET_LINK_LIBRARIES(matdrv-tests gtest pthread)
